[package]
name = "rsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "wrap_help", "cargo"] }
noodles = { version = "0.67.0", features = ["sam", "bam", "cram"] }
noodles-util = { version = "0.39.0", features = ["alignment"] }
seqcol_rs = "0.1.0"
serde_json = { version = "1.0.115", features = ["indexmap", "preserve_order"] }
