[package]
name = "rsrs"
version = "0.2.0"
edition = "2024"
authors = ["Rob Patro <rob@cs.umd.edu>"]
description = "command line tool to compute seqcol objects and digests"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/rsrs"
homepage = "https://github.com/COMBINE-lab/rsrs"
documentation = "https://docs.rs/rsrs"
include = ["src/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = ["genomics", "provenance", "seqcol"]
categories = ["science", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "wrap_help", "cargo"] }
noodles = { version = "0.73.0", features = ["sam", "bam"] }
seqcol_rs = { git = "https://github.com/COMBINE-lab/seqcol-rs", branch = "dev", version = "0.4.0" }
serde_json = { version = "1.0.115", features = ["indexmap", "preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
lto = "thin"
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
